Basic searches now search all categories. Advanced searches check ZZT/Super ZZT/Utilities by default. Fixed Min/Max rating on advanced searches not being capped from 0-5. Viewing multipage articles now shows the next/previous page links properly. Archive.org embeds no longer get cut off as the iframe is resized. Fixed advanced searches by year erroring out. Added All/None buttons to search categories. Began importing Closer Looks from Pokyfriends to the Museum.

--- a/z2_site/static/css/forms.css
+++ b/z2_site/static/css/forms.css
@@ -66,6 +66,13 @@ input, select, textarea
     float:left;
 }
 
+#detail-list div[name=all-none]
+{
+    width:88%;
+    font-size:smaller;
+    text-align:right;
+}
+
 #preferences label
 {
     min-height:2em;
